2013-01-02  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/README: Mention ISO 8601 week-numbering dates.

2013-01-01  Martin Rudalics  <rudalics@gmx.at>

	* view.el (view-mode-enable): New argument run-view-mode-hook.
	Run view-mode-hook only when it's non-nil (Bug#13315).
	(view-mode-enter): Call view-mode-enable with run-view-mode-hook
	argument t.

2012-12-31  Jürgen Hötzel  <juergen@archlinux.org>

	* net/tramp-adb.el (tramp-adb-maybe-open-connection): Handle errors
	(No device connected, invalid device name). (Bug #13299)

2012-12-31  Martin Rudalics  <rudalics@gmx.at>

	* window.el (window-resizable--p): Rename to window-resizable-p.
	(window-resize-no-error): New function.

	* mail/rmail.el (rmail-maybe-display-summary): Restore behavior
	broken in fix from 2012-12-28.

2012-12-31  Stefan Monnier  <monnier@iro.umontreal.ca>

	* subr.el (special-form-p): Don't signal errors on undef aliases.

2012-12-31  Jay Belanger  <jay.p.belanger@gmail.com>

	* calc/calc-forms.el (math-parse-date): Try using
	`math-parse-iso-date' when it looks like it might be needed.
	Allow times of 24:00.
	(math-parse-date-validate, math-parse-iso-date-validate):  Allow times
	of 24:00.

2012-12-30  Glenn Morris  <rgm@gnu.org>

	* net/mairix.el (rmail, rmail-summary-displayed, rmail-summary):
	Remove unnecessary/buggy autoloads (missing interactive).  (Bug#13294)
	(rmail-summary-displayed, rmail-summary): Declare.
	(mairix-rmail-display): Just require rmail.

2012-12-30  Chong Yidong  <cyd@gnu.org>

	* emacs-lisp/package.el (package-untar-buffer): Improve integrity
	check for the tarball contents.

2012-12-30  Matt Fidler  <matt.fidler@alcon.com>  (tiny change)

	* emacs-lisp/package.el (package-untar-buffer): Handle problematic
	tarfile content listings (Bug#13136).

2012-12-30  Mark Lillibridge  <mark.lillibridge@hp.com>

	* mail/rmailmm.el (rmail-insert-mime-forwarded-message):
	Insert the undecoded text of the message being forwarded.  (Bug#9521)
